Fix alignment

--- a/src/sap/sdk-java/DocsRating/docRating.css
+++ b/src/sap/sdk-java/DocsRating/docRating.css
@@ -26,9 +26,10 @@
     display: inline-block;
     font-weight: 500;
     line-height: 32px;
-    margin-left: 0px;
+    margin-left: -30px;
     margin-top: 42px;
     min-height: 66px;
+    float:right;
     padding: 16px 30px 16px 40px;
     text-align: center;
 }
